Fixes to get Adler and CRC platform tests running again